--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,10 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "firebase-admin": "~5.12.1",
-    "firebase-functions": "^1.0.3"
+    "firebase-functions": "^1.0.3",
+    "twilio": "^3.17.2"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
