--- a/functions/package.json
+++ b/functions/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "config": "^1.30.0",
     "firebase-admin": "~5.12.1",
     "firebase-functions": "^1.0.3",
+    "morgan": "^1.9.0",
     "twilio": "^3.17.2"
   },
   "devDependencies": {
