--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "config": "^1.30.0",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
     "firebase-admin": "~5.12.1",
     "firebase-functions": "^1.0.3",
     "morgan": "^1.9.0",
