--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,6 @@
 {
   "name": "functions",
+  "main": "lib/index.js",
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "lint": "eslint .",
@@ -7,7 +8,8 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "build": "./node_modules/.bin/tslint --project tsconfig.json && ./node_modules/.bin/tsc"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -15,13 +17,13 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "firebase-admin": "~5.12.1",
-    "firebase-functions": "^1.0.3",
+    "firebase-functions": "^1.0.4",
     "morgan": "^1.9.0",
     "twilio": "^3.17.2"
   },
   "devDependencies": {
-    "eslint": "^4.12.0",
-    "eslint-plugin-promise": "^3.6.0"
+    "tslint": "^5.10.0",
+    "typescript": "^2.9.1"
   },
   "private": true
 }
