--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["es6"],
+    "lib": ["es2017", "dom"],
     "module": "commonjs",
     "noImplicitReturns": true,
     "outDir": "lib",
