--- a/functions/package.json
+++ b/functions/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/morgan": "^1.7.35",
+    "@types/source-map-support": "^0.4.1",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
@@ -19,6 +20,7 @@
     "firebase-admin": "~5.12.1",
     "firebase-functions": "^1.0.4",
     "morgan": "^1.9.0",
+    "source-map-support": "^0.5.6",
     "twilio": "^3.17.2"
   },
   "devDependencies": {
