--- a/functions/package.json
+++ b/functions/package.json
@@ -11,21 +11,21 @@
     "start": "npm run shell"
   },
   "dependencies": {
-    "@types/morgan": "^1.7.35",
-    "@types/source-map-support": "^0.4.1",
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "firebase-admin": "~5.12.1",
-    "firebase-functions": "^1.0.4",
-    "morgan": "^1.9.0",
-    "source-map-support": "^0.5.6",
-    "twilio": "^3.17.2"
+    "@types/morgan": "1.7.35",
+    "@types/source-map-support": "0.5.0",
+    "axios": "0.18.0",
+    "body-parser": "1.18.3",
+    "cors": "2.8.5",
+    "express": "4.16.4",
+    "firebase-admin": "7.1.1",
+    "firebase-functions": "2.2.1",
+    "morgan": "1.9.1",
+    "source-map-support": "0.5.11",
+    "twilio": "3.29.2"
   },
   "devDependencies": {
-    "tslint": "^5.10.0",
-    "typescript": "^2.9.1"
+    "tslint": "5.14.0",
+    "typescript": "3.3.4000"
   },
   "private": true
 }
