--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,8 @@
 {
   "name": "functions",
+  "engines": {
+    "node": "8"
+  },
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
@@ -13,6 +16,7 @@
   "dependencies": {
     "@types/morgan": "1.7.35",
     "@types/source-map-support": "0.5.0",
+    "@types/twilio": "0.0.10",
     "axios": "0.18.0",
     "body-parser": "1.18.3",
     "cors": "2.8.5",
@@ -24,7 +28,12 @@
     "twilio": "3.29.2"
   },
   "devDependencies": {
-    "tslint": "5.14.0",
+    "@typescript-eslint/eslint-plugin": "^1.5.0",
+    "@typescript-eslint/parser": "^1.5.0",
+    "eslint": "^5.15.3",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "prettier": "^1.16.4",
     "typescript": "3.3.4000"
   },
   "private": true
