--- a/functions/package.json
+++ b/functions/package.json
@@ -7,11 +7,12 @@
   "scripts": {
     "build": "tsc",
     "deploy": "firebase deploy --only functions",
-    "lint": "tslint --project tsconfig.json",
+    "lint": "eslint",
     "logs": "firebase functions:log",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell"
+    "start": "npm run shell",
+    "docs": "./node_modules/.bin/esdoc && open ./docs/index.html"
   },
   "dependencies": {
     "@types/morgan": "1.7.35",
@@ -21,20 +22,23 @@
     "body-parser": "1.18.3",
     "cors": "2.8.5",
     "express": "4.16.4",
-    "firebase-admin": "7.1.1",
+    "firebase-admin": "7.2.0",
     "firebase-functions": "2.2.1",
     "morgan": "1.9.1",
-    "source-map-support": "0.5.11",
-    "twilio": "3.29.2"
+    "source-map-support": "0.5.12",
+    "twilio": "3.30.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^1.5.0",
-    "@typescript-eslint/parser": "^1.5.0",
-    "eslint": "^5.15.3",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.16.4",
-    "typescript": "3.3.4000"
+    "@typescript-eslint/eslint-plugin": "1.6.0",
+    "@typescript-eslint/parser": "1.6.0",
+    "esdoc": "1.1.0",
+    "esdoc-standard-plugin": "1.0.0",
+    "esdoc-typescript-plugin": "1.0.1",
+    "eslint": "5.16.0",
+    "eslint-config-prettier": "4.1.0",
+    "eslint-plugin-prettier": "3.0.1",
+    "prettier": "1.16.4",
+    "typescript": "3.4.2"
   },
   "private": true
 }
