--- a/functions/package.json
+++ b/functions/package.json
@@ -12,7 +12,8 @@
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
-    "docs": "./node_modules/.bin/esdoc && open ./docs/index.html"
+    "docs": "./node_modules/.bin/esdoc && open ./docs/index.html",
+    "test": "jest --verbose=false"
   },
   "dependencies": {
     "@types/morgan": "1.7.35",
@@ -29,6 +30,7 @@
     "twilio": "3.30.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.11",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
     "esdoc": "1.1.0",
@@ -37,7 +39,9 @@
     "eslint": "5.16.0",
     "eslint-config-prettier": "4.1.0",
     "eslint-plugin-prettier": "3.0.1",
+    "jest": "^24.7.1",
     "prettier": "1.16.4",
+    "ts-jest": "^24.0.2",
     "typescript": "3.4.3"
   },
   "private": true
