--- a/functions/package.json
+++ b/functions/package.json
@@ -30,6 +30,7 @@
     "twilio": "3.30.0"
   },
   "devDependencies": {
+    "@types/faker": "^4.1.5",
     "@types/jest": "^24.0.11",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
@@ -39,6 +40,7 @@
     "eslint": "5.16.0",
     "eslint-config-prettier": "4.1.0",
     "eslint-plugin-prettier": "3.0.1",
+    "faker": "^4.1.0",
     "jest": "^24.7.1",
     "prettier": "1.16.4",
     "ts-jest": "^24.0.2",
