--- a/functions/package.json
+++ b/functions/package.json
@@ -28,11 +28,11 @@
     "firebase-functions": "2.2.1",
     "morgan": "1.9.1",
     "source-map-support": "0.5.12",
-    "twilio": "3.30.0"
+    "twilio": "3.30.1"
   },
   "devDependencies": {
-    "@types/faker": "^4.1.5",
-    "@types/jest": "^24.0.11",
+    "@types/faker": "4.1.5",
+    "@types/jest": "24.0.11",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
     "esdoc": "1.1.0",
@@ -41,10 +41,10 @@
     "eslint": "5.16.0",
     "eslint-config-prettier": "4.1.0",
     "eslint-plugin-prettier": "3.0.1",
-    "faker": "^4.1.0",
-    "jest": "^24.7.1",
-    "prettier": "1.16.4",
-    "ts-jest": "^24.0.2",
+    "faker": "4.1.0",
+    "jest": "24.7.1",
+    "prettier": "1.17.0",
+    "ts-jest": "24.0.2",
     "typescript": "3.4.3"
   },
   "private": true
