--- a/functions/package.json
+++ b/functions/package.json
@@ -17,9 +17,6 @@
     "testv": "jest --verbose=true"
   },
   "dependencies": {
-    "@types/morgan": "1.7.35",
-    "@types/source-map-support": "0.5.0",
-    "@types/twilio": "0.0.10",
     "axios": "0.18.0",
     "body-parser": "1.18.3",
     "cors": "2.8.5",
@@ -31,8 +28,14 @@
     "twilio": "3.30.1"
   },
   "devDependencies": {
+    "@types/body-parser": "1.17.0",
+    "@types/cors": "2.8.4",
+    "@types/express": "4.16.1",
     "@types/faker": "4.1.5",
     "@types/jest": "24.0.11",
+    "@types/morgan": "1.7.35",
+    "@types/source-map-support": "0.5.0",
+    "@types/twilio": "0.0.10",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
     "esdoc": "1.1.0",
